# grpc-sample

./: Cargo.toml  build.rs
protos/: info.proto
src/: client.rs  server.rs
