[package]
name = "grpc-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.8"
tokio = { version = "1.27.0", features = ["rt", "macros", "rt-multi-thread"] }
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"

[[bin]]
name = "grpc_server"
path = "src/server.rs"

[[bin]]
name = "grpc_client"
path = "src/client.rs"
